# flowrunner

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  LICENSE  Makefile  another_flow_example.py  changelog.md  class_flow_example.py  exampleflow.html  exampleflow2.html  examplepandas.html  examplepandasdescription.html  flow_example.py  flowchart_flow_example.html  new.md  pyproject.toml  readme.md  runner.py  test.py  test_final.html  test_pandas.py  testing.py
.github/: build.yml  pull_request_template.md
.github/issue_template/: bug_report.md  documentation_improvement.md
.github/workflows/: build.yml  code_scan.yml  docs.yml  release.yml  release_test.yml  test.yml  tests.yml
docs/source/: api_reference.rst  conf.py  contributing_guide_code.rst  contributing_guide_docs.rst  creating_flowrunner_projects.rst  creating_your_development_environment.rst  databricks_example.rst  flowrunner.core.rst  flowrunner.core.templates.rst  flowrunner.rst  flowrunner.runner.rst  flowrunner.system.rst  getting_started.rst  index.rst  introduction.rst  jupyter_notebook.rst  notebook_examples.rst  pandas_example.rst  pyspark_example.rst
docs/source/_static/: flowrunner_databricks_example.html  flowrunner_pandas_notebook_example.html  flowrunner_pyspark_example.html
examples/: example.py  example_notebook.ipynb  flowrunner_pyspark_example.html  pandas_example.py  pyspark_example.py  spark_example.py
flowrunner/: __init__.py  __main__.py  cli.py  data_store.py  decorators.py  flow_example.py  flowchart_generator.py  logger.py  runner.py
flowrunner/core/: base.py  data_store.py  decorators.py  flow.py  flowchart_generator.py  graph.py  helpers.py
flowrunner/core/templates/: base.html  base_test.html  cookiecutter.json  mermaid_test copy.html  mermaid_test.html  styles.css
flowrunner/core/templates/{{ cookiecutter.project_name }}/: pyproject.toml  readme.md
flowrunner/core/templates/{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/my_flows/: pandas_example.py
flowrunner/runner/: flow.py
flowrunner/system/: exceptions.py  logger.py
flowrunner/templates/: DOMTree.html  base.html  flowchart.html  flowchart_flow_example.html
flowrunner/web/: app.py
flowrunner/web/backend/: server.py
flowrunner/web/templates/: base.html  ui.js
templates/: cookiecutter.json
templates/{{ cookiecutter.project_name }}/: changelog.md  pyproject.toml  readme.md
templates/{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/html_dags/: examplepandas.html
templates/{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/my_flows/: example_pandas.py  pandas_example.py
tests/: test_data_store.py  test_decorators.py
tests/test_examples/: test_example_notebook.ipynb  test_example_notebook.py
tests/test_flowrunner/: test_cli.py  test_data_store.py
tests/test_flowrunner/core/: backup_test_base.py  examplepandas.html  test_base.py  test_decorators.py  test_flow.py  test_graph.py  test_helpers.py
tests/test_flowrunner/core/templates/: test_cookiecutter.py
tests/test_flowrunner/runner/: test_flow.py
tests/test_flowrunner/system/: test_logger.py
tests/test_templates/: test_cookiecutter.py
