[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flowrunner"
authors = [
    {name = "Prithvijit Guha", email = "prithvijit_guha2@hotmail.com"},
]

version = "0.0.2"

description = "FlowRunner is a lightweight package to organize and represent Data Engineering/Science workflows"
readme = "readme.md"
requires-python = ">=3.8"
keywords = ["Data Engineering", "Data Science"]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: flowrunner",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    'requests',
    'importlib-metadata; python_version<="3.8"',
    'click>=8.1.3',
    'Jinja2>=3.1.2',
    'coloredlogs>=15.0.1',
    'ipython>=8.11.0',
    'matplotlib>=3.7.1'
]




[project.urls]
homepage = "https://github.com/prithvijitguha/flowrunner"
issues = "https://github.com/prithvijitguha/flowrunner/issues"



[project.optional-dependencies]
doc = [
    "Sphinx>=6.1.3",
    "sphinx-material>=0.0.35",
    "sphinxcontrib-mermaid>=0.8.1",
    "sphinx-tabs>=3.4.1",
    "isort>=5.12.0",
    "pre-commit>=3.1.1",
    "coverage<=7.2.1",
    "pytest>=7.2.1",
]

dev = [
    "pylint>=2.16.4",
    "black>=23.1.0",
    "coverage<=7.2.1",
    "pytest>=7.2.1",
    "isort>=5.12.0",
    "pre-commit>=3.1.1",
    "pandas>=1.5.3",
    "ipython>=8.11.0",
    "matplotlib>=3.7.1"
]
test = [
    "pytest>=7.2.1",
    "coverage<=7.2.1",
    "isort>=5.12.0",
    "pre-commit>=3.1.1",
    "pandas>=1.5.3",
    "ipython>=8.11.0",
    "matplotlib>=3.7.1"
]
pandas = [
    "pandas>=1.5.3"
]


[options]
package_dir=[
    "flowrunner"
]


[options.packages.find]
where=[
    "flowrunner"
]


[project.scripts]
cli = "flowrunner.cli:cli"

[tool.pytest.ini_options]
pythonpath = [
    "flowrunner",
    "tests"
    ]
testpaths = [
    "tests"
]
addopts = [
    "--cache-clear",
    "-v"
]
